[package]
name = "urx"
version = "0.8.0"
edition = "2021"
authors = ["hahwul"]
description = "Extracts URLs from OSINT Archives for Security Insights."
license = "MIT"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.18.3"
url = "2.5.0"
rand = "0.8.5"
scraper = "0.25.0"
toml = "0.9.11"
async-trait = "0.1"
roxmltree = "0.21.1"
colored = "3.0.0"
async-recursion = "1.0.5"
flate2 = "1.1"
rusqlite = { version = "0.32", features = ["bundled"] }
redis = { version = "1.0", optional = true, features = ["aio", "tokio-comp"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.7.1"
tempfile = "3.24.0"

[features]
default = []
redis-cache = ["redis"]
