[package]
name = "urx"
version = "0.9.0"
edition = "2021"
authors = ["hahwul"]
description = "Extracts URLs from OSINT Archives for Security Insights."
license = "MIT"

[dependencies]
tokio = { version = "1.51", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
indicatif = "0.18.4"
url = "2.5.0"
rand = "0.10.1"
scraper = "0.26.0"
toml = "1.1.2"
async-trait = "0.1"
roxmltree = "0.21.1"
colored = "3.1.1"
async-recursion = "1.0.5"
base64 = "0.22"
flate2 = "1.1"
rusqlite = { version = "0.39", features = ["bundled"] }
redis = { version = "1.2", optional = true, features = ["aio", "tokio-comp"] }
sha2 = "0.11"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
mockito = "1.7.2"
tempfile = "3.27.0"

[features]
default = []
redis-cache = ["redis"]
